# quasi-optimal_ranking

./: CMakeLists.txt  README.md  arm-none-eabi-libopencm3.toolchain  stm32f4discovery.cmake
hw/: hal-stm32f4.c  hal.h  hw_randombytes.c  randombytes.h  stm32f405x6_fullram.ld  syscall_wrappers.c
src/: bn.c  bn.h  bonet_bn.c  bonet_bn.h  bonet_gmp.c  bonet_gmp.h  config.h  divide_ct.h  divide_tables.c  factorial_tables_bn.h  factorial_tables_gmp.h  fast.c  fast.h  lehmer_bn.c  lehmer_bn.h  lehmer_gmp.c  lehmer_gmp.h  lehmer_quasi-optimal.c  lehmer_quasi-optimal_avx2.c  parsing_permutations.h  permutations.c  permutations.h
test/: test_bonet_bn.c  test_bonet_gmp.c  test_fast.c  test_lehmer_bn.c  test_lehmer_gmp.c  test_lehmer_quasi-optimal.c  test_utils.h
